# MCP_based_KG_construction

./: .env  .env.example  AI_技术领域知识图谱.html  KG_quality_enhance.md  KNOWLEDGE_GRAPH_README.md  LLM_INTEGRATION_GUIDE.md  LLM_entity_extract.py  README.md  README_cn.md  USAGE_ENHANCED.md  data_quality.py  enhanced_kg.html  enhanced_knowledge_graph.html  kg_client.py  kg_client_enhanced.py  kg_client_simple.py  kg_example.py  kg_server.py  kg_server_enhanced.py  kg_server_simple.py  kg_utils.py  kg_visualizer.py  knowledge_completion.py  knowledge_graph.html  process_dataset.py  pyproject.toml  quick_test.py  test_analysis_modules.py  test_enhanced_features.py  test_enhanced_kg.html  test_llm_connection.py  政务主谓宾句子_低质量版本_1000条.csv
content enhancement/: entity_detail_analyzer.py  global_analysis.py
content_enhancement/: README_analysis_pipeline.md  __init__.py  analysis_pipeline.py  enhanced_kg_visualizer.py  enhancement_executor.py  entity_detail_analyzer.py  global_analysis.py  llm_client.py  logic_analyzer.py
data/: load_datas.py  政务文本语句.csv  政务文本语句_低质量版本.csv
data/processed_dataset/: news_agriculture.txt  news_car.txt  news_culture.txt  news_edu.txt  news_entertainment.txt  news_finance.txt  news_game.txt  news_house.txt  news_military.txt  news_sports.txt  news_stock.txt  news_story.txt  news_tech.txt  news_travel.txt  news_world.txt  test.txt
tests/: __init__.py  test_analysis_modules.py  test_llm_connection.py
